--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				
 				<ul>
 					<li>| <a href="about.html">About us</a></li>		
-					<li>| <a href="../hw2/index.html">Homework2</a></li>
+					<li>| <a href="hw2/index.html">Homework2</a></li>
 					<li>| <a href="#">Portfolio</a></li>
 					<li>| <a href="index.html">Home</a></li>
 				</ul>
