--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -41,9 +41,9 @@
         </div>
     </div> -->
     <DIV class="welcome ">
-    <div class='content-wrapper'>
+    <div class='content-wrapper contaniner'>
         <div class="content">
-        	<h1 class="display-2">Hi, I'm Abdulah</h1>
+        	<h1 class="display-2">Hi, I'm Abdullah</h1>
         </div>
     </div>
     </DIV>
