--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -40,8 +40,8 @@
             <div class="carousel-item"><img src="imgs/welcome03.jpg" class="d-block w-100" alt="Welcome03"></div>
         </div>
     </div> -->
-    <DIV class="welcome ">
-    <div class='content-wrapper contaniner'>
+    <DIV class="welcome container">
+    <div class='content-wrapper'>
         <div class="content">
         	<h1 class="display-2">Hi, I'm Abdullah</h1>
         </div>
