--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -40,13 +40,23 @@
             <div class="carousel-item"><img src="imgs/welcome03.jpg" class="d-block w-100" alt="Welcome03"></div>
         </div>
     </div> -->
-    <DIV class="welcome">
-    <div class='content-wrapper'>
-        <div class="content">
-        	<h1 class="display-2">Hi, I'm Abdullah</h1>
-        </div>
-    </div>
+    <DIV class="welcome content shadow user-select-none">
+    
+       	<h1 class="display-2 mt-md-5">Hi, I'm Abdulah</h1>
+        	<p>I write about ELectronic Communucations, Programming,Computers,<br> and my experiments in building a fulfilling life.</p>
     </DIV>
+    <div class="container">
+	    <div class='WhatIdo mx-md-1'>
+	    	<h2 class="text-center">What I do?!</h2>
+	    	<h3 class="text-secondary font-weight-light">17,March,2021</h3>
+	    	<p class="text-justify ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	    	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	    	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	    	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	    	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	    	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	    </div>
+	</div>
     <script src=" js/bootstrap_jquery.js ">
     </script>
     <script src="js/bootstrap_bundle.js "></script>
