--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -43,7 +43,7 @@
     <DIV class="welcome content shadow user-select-none">
     
        	<h1 class="display-2 mt-md-5">Hi, I'm Abdulah</h1>
-        	<p>I write about ELectronic Communucations, Programming,Computers,<br> and my experiments in building a fulfilling life.</p>
+        	<p class="m-xs-2">I write about ELectronic Communucations, Programming,Computers,<br> and my experiments in building a fulfilling life.</p>
     </DIV>
     <div class="container">
 	    <div class='WhatIdo mx-md-1'>
