--- a/MyWebsite/articale.html
+++ b/MyWebsite/articale.html
@@ -10,31 +10,31 @@
     <link rel="stylesheet" href="css/bootstrapsheet.css">
     <link rel="stylesheet" href="css/sheet.css">
     <style type="text/css">
-    	.welcome{
-    		background: #fff;
-		    background-image: url('imgs/welcome01.jpg');
-		    background-repeat: no-repeat;
-		    background-position: center;
-		    background-size: cover;
-    	}
+        .welcome{
+            background: #fff;
+            background-image: url('imgs/DishAntenna.jpg');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+        }
     </style>
 
-    <title>Abdullah Elkuse</title>
+    <title>Abdullah Elkuse-Articale</title>
 </head>
 
 <body>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="imgs/logo.png" width="30" height="30" class="d-inline-block align-top" alt="LOGO"> Abdullah Elkuse</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
+                <li class="nav-item active"><a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
                 <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown"><a class="dropdown-item" href="#">Web-pages</a><a class="dropdown-item" href="#">Python</a><a class="dropdown-item" href="#">Solidworks</a>
-                        <div class="dropdown-divider"></div><a class="dropdown-item" href="articales.html">Articles</a></div>
+                        <div class="dropdown-divider"></div><a class="dropdown-item" href="#">Articles</a></div>
                 </li>
                 <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Gallery(Comming Soon)</a></li>
             </ul>
@@ -49,16 +49,15 @@
             <div class="carousel-item"><img src="imgs/welcome03.jpg" class="d-block w-100" alt="Welcome03"></div>
         </div>
     </div> -->
-    <DIV class="welcome shadow user-select-none">
-    	<div class="content">
-	       	<h1 class="display-2 mt-md-5">Hi, I'm Abdulah</h1>
-	        <p class="m-xs-2">I write about ELectronic Communucations, Programming,Computers,<br> and my experiments in building a fulfilling life.</p>
-        </div>
+    <DIV class="welcome content shadow user-select-none">
+    
+       	<h1 class="display-2 mt-md-5">Articale Title</h1>
+        <p class="m-xs-2">Articale summary Articale summary Articale summary Articale summary Articale summary</p>
     </DIV>
     <section class="container">
 	    <div class='WhatIdo mx-md-1 mx-lg-5 px-lg-5'>
 	    	<h2 class="text-center">What I do?!</h2>
-	    	<h3 class="date text-secondary font-weight-light">March 17,2021 Wednesday</h3>
+	    	<h3 class="date text-secondary font-weight-light">March 17,2021 Wednesday  DATE</h3>
 	    	<p class="text-left ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	    	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	    	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -70,26 +69,6 @@
 	<div class='block' >
 		
 	</div>
-
-    <section class="container ">
-	    <div class='MyBest mx-md-1 mx-lg-5 px-lg-5'>
-	    	<h2 class="text-center">My Best Writing</h2>
-	    	<h3 class="date text-secondary font-weight-light">March 17,2021 Wednesday</h3>
-	    	<p class="text-left ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	    	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	    	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	    	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	    	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	    	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	    	<ul class="list-group">
-	    		list label
-	    		<li class="list-group-item">list item</li>
-	    		<li class="list-group-item">list item</li>
-	    		<li class="list-group-item">list item</li>
-	    		<li class="list-group-item">list item</li>
-	    	</ul>
-	    </div>
-	</section>
     <script src=" js/bootstrap_jquery.js ">
     </script>
     <script src="js/bootstrap_bundle.js "></script>
